--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/nb-NO/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/nb-NO/Resources.resw
@@ -2167,6 +2167,12 @@ En høy tjenerbelastning kan redusere tilkoblingen.</value>
   <data name="Flyouts_IpAddress_VpnIp">
     <value>VPN-IP</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>Din IP</value>
   </data>
@@ -2845,6 +2851,18 @@ En høy tjenerbelastning kan redusere tilkoblingen.</value>
     <value>Proton VPN - Spørreundersøkelse</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>For å inkludere denne adressen, må du tillate IPv6-tilkoblinger gjennom VPN-tunnelen.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Aktiver IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Ikke nå</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 er deaktivert</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Oppdater nå</value>
   </data>
@@ -3158,6 +3176,19 @@ En høy tjenerbelastning kan redusere tilkoblingen.</value>
     <value>Anvend</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Adresse allerede lagt til</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Skriv inn en gyldig IPv4- eller IPv6-adresse</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Advarsel - lær mer</value>
+  </data>
   <data name="Settings_Connection">
     <value>Tilkobling</value>
   </data>
@@ -3172,6 +3203,10 @@ En høy tjenerbelastning kan redusere tilkoblingen.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Egendefinerte DNS-tjenere</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Legg til ny DNS-tjener</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>Du vil ikke kunne bruke NetShield når du er koblet til en egendefinert DNS-tjener.</value>
@@ -3189,15 +3224,20 @@ En høy tjenerbelastning kan redusere tilkoblingen.</value>
     <value>DNS-tjenere ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>Legg til IPv4-adresse</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Skriv inn tjenerens IPv4 - eller IPv6-adresse</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>IPv6-støtte</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>Deaktiver IPv6-trafikk</value>
+    <value>IPv6-lekkasjebeskyttelse</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Forhindrer IPv6-lekkasjer ved å blokkere tilkoblinger til IPv6-adresser.</value>
+    <value>Forhindrer datalekkasjer ved å blokkere IPv6-trafikk som ikke går gjennom VPN-tunnelen.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Tillater IPv6-trafikk å passere gjennom VPN-tunnelen. Dette forbedrer kompatibiliteten med IPv6-nettsteder og -tjenester.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Tillat LAN-forbindelser</value>
@@ -3372,9 +3412,6 @@ En høy tjenerbelastning kan redusere tilkoblingen.</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Delt tunnelering</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>Legg til app</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>App-filer</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3405,8 +3442,8 @@ En høy tjenerbelastning kan redusere tilkoblingen.</value>
     <value>Inkluder</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>Legg til IP</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Legg til ny IPv4- eller IPv6-adresse</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Valgte IP-adresser ({0})</value>
@@ -3414,9 +3451,6 @@ En høy tjenerbelastning kan redusere tilkoblingen.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>Fjern IP</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>Legg til IPv4-adresse</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Ekskluderingsmodus</value>
