--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/be-BY/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/be-BY/Resources.resw
@@ -2317,6 +2317,12 @@
   <data name="Flyouts_IpAddress_VpnIp">
     <value>IP VPN</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>Ваш IP</value>
   </data>
@@ -3061,6 +3067,18 @@
     <value>Апытанне Proton VPN</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>Вам неабходна дазволіць падключэнні па IPv6 праз тунэль VPN, каб уключыць гэты адрас.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Уключыць IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Не цяпер</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 адключаны</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Абнавіць</value>
   </data>
@@ -3374,6 +3392,19 @@ Secure Core</value>
     <value>Ужыць</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Адрас ужо дададзены</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Увядзіце сапраўдны адрас IPv4 або IPv6</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Папярэджанне - даведацца больш</value>
+  </data>
   <data name="Settings_Connection">
     <value>Падключэнне</value>
   </data>
@@ -3388,6 +3419,10 @@ Secure Core</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Карыстальніцкія серверы DNS</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Дадаць новы сервер DNS</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>У вас не будзе магчымасці выкарыстоўваць NetShield пры падключэнні да карыстальніцкага сервера DNS.</value>
@@ -3405,15 +3440,20 @@ Secure Core</value>
     <value>Серверы DNS ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>Дадаць адрас IPv4</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Увядзіце адрас сервера IPv4 або IPv6</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>Падтрымка IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>Адключыць трафік IPv6</value>
+    <value>Абарона ад уцечкі ў IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Прадухіляць уцечку IPv6 блакіруючы падключэнні да адрасоў IPv6.</value>
+    <value>Прадухіляе ўцечкі даных, блакіруючы трафік IPv6, які не праходзіць праз тунэль VPN.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Дазваляе трафіку IPv6 праходзіць праз тунэль VPN. Гэта паляпшае сумяшчальнасць з вэб-сайтамі і службамі, якія выкарыстоўваюць IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Дазволіць падключэнні па лакальнай сетцы</value>
@@ -3588,9 +3628,6 @@ Secure Core</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Split Tunneling</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>Дадаць праграму</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>Файлы праграмы</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3621,8 +3658,8 @@ Secure Core</value>
     <value>Уключае</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>Дадаць IP</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Дадаць новы адрас IPv4 або IPv6</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Выбраныя IP-адрасы ({0})</value>
@@ -3630,9 +3667,6 @@ Secure Core</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>Выдаліць IP</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>Дадаць адрас IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Рэжым выключэння</value>
@@ -3884,7 +3918,7 @@ Secure Core</value>
     <value>Пашыраны Kill Switch блакіруе ваша падключэнне да інтэрнэту.</value>
   </data>
   <data name="SignIn_Form_BestSecureVpnForSpeed">
-    <value>Лепшы бяспечны VPN для хуткасці</value>
+    <value>Найлепшы бяспечны VPN для хуткай працы</value>
   </data>
   <data name="SignIn_Form_CreateAccount">
     <value>Стварыць уліковы запіс</value>
