--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/cs-CZ/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/cs-CZ/Resources.resw
@@ -2317,6 +2317,12 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   <data name="Flyouts_IpAddress_VpnIp">
     <value>VPN IP</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>Vaše IP</value>
   </data>
@@ -3061,6 +3067,18 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Proton VPN - Průzkum</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>Chcete-li zahrnout tuto adresu, musíte povolit připojení IPv6 skrze tunel VPN.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Povolit IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Nyní ne</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 je deaktivována</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Aktualizovat nyní</value>
   </data>
@@ -3374,6 +3392,19 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Použít</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Adresa je již přidána</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Zadejte platnou adresu IPv4 nebo IPv6</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Varování – více informací</value>
+  </data>
   <data name="Settings_Connection">
     <value>Připojení</value>
   </data>
@@ -3388,6 +3419,10 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Vlastní servery DNS</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Přidat nový DNS server</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>Při připojení k vlastnímu DNS serveru nebudete moci používat NetShield.</value>
@@ -3405,15 +3440,20 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>DNS servery ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>Přidat adresu IPv4</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Zadejte IPv4 nebo IPv6 adresu serveru</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>Podpora IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>Deaktivovat provoz IPv6</value>
+    <value>Ochrana proti úniku IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Zabraňuje únikům IPv6 blokováním připojení k adresám IPv6.</value>
+    <value>Zabraňuje únikům dat blokováním provozu IPv6, který neprochází tunelem VPN.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Umožňuje IPv6 provozu procházet přes VPN tunel. To zlepšuje kompatibilitu s IPv6 webovými stránkami a službami.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Povolit připojení LAN</value>
@@ -3588,9 +3628,6 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Split tunneling</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>Přidat aplikaci</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>Soubory aplikace</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3621,8 +3658,8 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
     <value>Zahrnout</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>Přidat IP</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Přidat novou adresu IPv4 nebo IPv6</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Vybrané IP adresy ({0})</value>
@@ -3630,9 +3667,6 @@ Vysoké vytížení serveru může zpomalit vaše připojení.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>Odebrat IP</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>Přidat adresu IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Režim vyloučení</value>
