--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/de-DE/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/de-DE/Resources.resw
@@ -2167,6 +2167,12 @@ Eine hohe Serverauslastung kann Ihre Verbindung verlangsamen.</value>
   <data name="Flyouts_IpAddress_VpnIp">
     <value>VPN-IP</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>Deine IP</value>
   </data>
@@ -2845,6 +2851,18 @@ Eine hohe Serverauslastung kann Ihre Verbindung verlangsamen.</value>
     <value>Proton VPN - Umfrage</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>Um diese Adresse verwenden zu können, musst du IPv6-Verbindungen durch den VPN-Tunnel zulassen.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>IPv6 aktivieren</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Nicht jetzt</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 ist deaktiviert</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Jetzt aktualisieren</value>
   </data>
@@ -3158,6 +3176,19 @@ Eine hohe Serverauslastung kann deine Verbindung verlangsamen.</value>
     <value>Übernehmen</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Adresse bereits hinzugefügt</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Gib eine gültige IPv4- oder IPv6-Adresse ein</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Warnung - Mehr erfahren</value>
+  </data>
   <data name="Settings_Connection">
     <value>Verbindung</value>
   </data>
@@ -3172,6 +3203,10 @@ Eine hohe Serverauslastung kann deine Verbindung verlangsamen.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Benutzerdefinierte DNS‐Server</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Neuen DNS-Server hinzufügen</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>Wenn du mit einem benutzerdefinierten DNS-Server verbunden bist, kannst du NetShield nicht verwenden.</value>
@@ -3189,15 +3224,20 @@ Eine hohe Serverauslastung kann deine Verbindung verlangsamen.</value>
     <value>DNS-Server ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>IPv4‐Adresse hinzufügen</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Gib die IPv4- oder IPv6-Adresse des Servers ein</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>IPv6-Unterstützung</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>IPv6-Verkehr deaktivieren</value>
+    <value>Schutz vor IPv6-Offenlegung</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Verhindert IPv6-Lecks durch Blockieren von Verbindungen zu IPv6-Adressen.</value>
+    <value>Verhindert Datenlecks, indem IPv6-Verkehr blockiert wird, der nicht durch den VPN-Tunnel geleitet wird.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Ermöglicht den Durchsatz des IPv6-Datenverkehrs durch den VPN-Tunnel. Dies verbessert die Kompatibilität mit IPv6-Websites und -Diensten.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>LAN-Verbindungen zulassen</value>
@@ -3372,9 +3412,6 @@ Eine hohe Serverauslastung kann deine Verbindung verlangsamen.</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Split‐Tunneling</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>App hinzufügen</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>App-Dateien</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3405,8 +3442,8 @@ Eine hohe Serverauslastung kann deine Verbindung verlangsamen.</value>
     <value>Einschließen</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>IP hinzufügen</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Neue IPv4- oder IPv6-Adresse hinzufügen</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Ausgewählte IP-Adressen ({0})</value>
@@ -3414,9 +3451,6 @@ Eine hohe Serverauslastung kann deine Verbindung verlangsamen.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>IP entfernen</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>IPv4‐Adresse hinzufügen</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Modus ausschließen</value>
