--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/it-IT/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/it-IT/Resources.resw
@@ -2167,6 +2167,12 @@ Un carico elevato può rallentare la connessione.</value>
   <data name="Flyouts_IpAddress_VpnIp">
     <value>IP della VPN</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>Il tuo IP</value>
   </data>
@@ -2845,6 +2851,18 @@ Un carico elevato può rallentare la connessione.</value>
     <value>Sondaggio per Proton VPN</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>Per includere questo indirizzo, devi consentire le connessioni IPv6 tramite il tunnel VPN.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Abilita IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Non ora</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 è disabilitato</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Aggiorna ora</value>
   </data>
@@ -3158,6 +3176,19 @@ Un carico elevato può rallentare la connessione.</value>
     <value>Applica</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Indirizzo già aggiunto</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Inserisci un indirizzo IPv4 o IPv6 valido</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Avviso - scopri di più</value>
+  </data>
   <data name="Settings_Connection">
     <value>Connessione</value>
   </data>
@@ -3172,6 +3203,10 @@ Un carico elevato può rallentare la connessione.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Server DNS personalizzati</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Aggiungi un nuovo server DNS</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>Non potrai utilizzare NetShield quando sei connesso a un server DNS personalizzato.</value>
@@ -3189,15 +3224,20 @@ Un carico elevato può rallentare la connessione.</value>
     <value>Server DNS ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>Aggiungi indirizzo IPv4</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Inserisci l'indirizzo IPv4 o IPv6 del server</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>Supporto IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>Disabilita traffico IPv6</value>
+    <value>Protezione dalle perdite IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Previene le perdite IPv6 bloccando le connessioni agli indirizzi IPv6.</value>
+    <value>Impedisce le perdite di dati bloccando il traffico IPv6 che non passa attraverso il tunnel VPN.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Consente al traffico IPv6 di passare attraverso il tunnel VPN. Ciò migliora la compatibilità con i siti web e i servizi IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Consenti le connessioni LAN</value>
@@ -3372,9 +3412,6 @@ Un carico elevato può rallentare la connessione.</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Split tunneling</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>Aggiungi app</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>File dell'app</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3405,8 +3442,8 @@ Un carico elevato può rallentare la connessione.</value>
     <value>Includi</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>Aggiungi IP</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Aggiungi nuovo indirizzo IPv4 o IPv6</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Indirizzi IP selezionati ({0})</value>
@@ -3414,9 +3451,6 @@ Un carico elevato può rallentare la connessione.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>Rimuovi indirizzo IP</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>Aggiungi un indirizzo IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Modalità di esclusione</value>
