--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pl-PL/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pl-PL/Resources.resw
@@ -2317,6 +2317,12 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
   <data name="Flyouts_IpAddress_VpnIp">
     <value>Adres IP VPN</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>Adres VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>Adres VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>Twój adres IP</value>
   </data>
@@ -3061,6 +3067,18 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Proton VPN - Ankieta</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>Aby uwzględnić ten adres, zezwól na połączenia IPv6 przez usługę VPN.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Włącz IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Nie teraz</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 jest wyłączony</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Zaktualizuj teraz</value>
   </data>
@@ -3374,6 +3392,19 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Zastosuj</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Adres został już dodany</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Wpisz prawidłowy adres IPv4 lub IPv6 serwera</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Ostrzeżenie - dowiedz się więcej</value>
+  </data>
   <data name="Settings_Connection">
     <value>Połączenie</value>
   </data>
@@ -3388,6 +3419,10 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Niestandardowe serwery DNS</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Dodaj nowy serwer DNS</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>Nie będzie można użyć funkcji NetShield po połączeniu się z niestandardowym serwerem DNS.</value>
@@ -3405,15 +3440,20 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Serwery DNS ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>Dodaj adres IPv4</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Wpisz adres IPv4 lub IPv6 serwera</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>Wsparcie IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>Wyłącz ruch IPv6</value>
+    <value>Zabezpieczenie przed wyciekiem adresu IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Zapobiega wyciekom IPv6, blokując połączenia z adresami IPv6.</value>
+    <value>Zapobiega wyciekom danych poprzez blokowanie ruchu IPv6, który nie przechodzi przez tunel VPN.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Zezwala na ruch IPv6 przez tunel VPN. Poprawia to kompatybilność ze stronami i usługami IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Zezwalaj na połączenia LAN</value>
@@ -3588,9 +3628,6 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Split tunneling</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>Dodaj aplikację</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>Pliki aplikacji</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3621,8 +3658,8 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
     <value>Dołącz</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>Dodaj adres IP</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Dodaj nowy adres IPv4 lub IPv6</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Wybrane adresy IP ({0})</value>
@@ -3630,9 +3667,6 @@ Duże obciążenie serwera może spowolnić połączenie.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>Usuń adres IP</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>Dodaj adres IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Tryb wykluczania</value>
