--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-BR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-BR/Resources.resw
@@ -2167,6 +2167,12 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   <data name="Flyouts_IpAddress_VpnIp">
     <value>IP da VPN</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>Seu IP</value>
   </data>
@@ -2845,6 +2851,18 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Pesquisa do Proton VPN</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>Para incluir este endereço, é necessário permitir conexões IPv6 através do túnel VPN.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Ativar IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Agora não</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 está desativado</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Atualizar agora</value>
   </data>
@@ -3158,6 +3176,19 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Aplicar</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Endereço já adicionado</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Insira um endereço IPv4 ou IPv6 válido</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Aviso - saiba mais</value>
+  </data>
   <data name="Settings_Connection">
     <value>Conexão</value>
   </data>
@@ -3172,6 +3203,10 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Servidores de DNS personalizado</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Adicionar servidor DNS</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>Você não poderá usar o NetShield quando estiver conectado a um servidor DNS personalizado.</value>
@@ -3189,15 +3224,20 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Servidores de DNS ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>Adicionar endereço IPv4</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Insira o endereço IPv4 ou IPv6 do servidor</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>Suporte a IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>Desativar tráfego IPv6</value>
+    <value>Proteção contra vazamento IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Previne vazamentos de IPv6 bloqueando conexões com endereços IPv6.</value>
+    <value>Prevents data leaks by blocking IPv6 traffic that doesn't pass through the VPN tunnel.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Allows IPv6 traffic to pass through the VPN tunnel. This improves compatibility with IPv6 websites and services.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Permitir conexões LAN</value>
@@ -3372,9 +3412,6 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Tunelamento dividido</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>Adicionar aplicativo</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>Arquivos do aplicativo</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3405,8 +3442,8 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Incluir</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>Adicionar IP</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Adicionar endereço IPv4 ou IPv6</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Endereços IP selecionados ({0})</value>
@@ -3414,9 +3451,6 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>Remover IP</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>Adicionar endereço IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Modo de exclusão</value>
