--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-PT/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-PT/Resources.resw
@@ -2167,6 +2167,12 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
   <data name="Flyouts_IpAddress_VpnIp">
     <value>IP da VPN</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>O seu IP</value>
   </data>
@@ -2845,6 +2851,18 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
     <value>Proton VPN - Inquérito</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>To include this address, you need to allow IPv6 connections through the VPN tunnel.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Enable IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Not now</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 is disabled</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Atualizar agora</value>
   </data>
@@ -3158,6 +3176,19 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
     <value>Aplicar</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Address already added</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Enter a valid IPv4 or IPv6 address</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Warning - learn more</value>
+  </data>
   <data name="Settings_Connection">
     <value>Ligação</value>
   </data>
@@ -3172,6 +3203,10 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Servidores DNS personalizados</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Add new DNS server</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>Não poderá usar o NetShield quando estiver ligado a um servidor DNS personalizado.</value>
@@ -3189,15 +3224,20 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
     <value>Servidores DNS ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>Adicionar endereço IPv4</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Enter the server's IPv4 or IPv6 address</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>IPv6 support</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>Desativar o tráfego IPv6</value>
+    <value>IPv6 leak protection</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Previne fugas de IPv6 ao bloquear conexões para endereços IPv6.</value>
+    <value>Prevents data leaks by blocking IPv6 traffic that doesn't pass through the VPN tunnel.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Allows IPv6 traffic to pass through the VPN tunnel. This improves compatibility with IPv6 websites and services.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Permitir ligações LAN</value>
@@ -3372,9 +3412,6 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Tunelamento dividido</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>Adicionar a aplicação</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>Ficheiros da aplicação</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3405,8 +3442,8 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
     <value>Incluir</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>Adicionar um IP</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Add new IPv4 or IPv6 address</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Endereços IP selecionados ({0})</value>
@@ -3414,9 +3451,6 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>Remover o IP</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>Adicionar endereço IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Modo de exclusão</value>
