--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ro-RO/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/ro-RO/Resources.resw
@@ -2242,6 +2242,12 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
   <data name="Flyouts_IpAddress_VpnIp">
     <value>IP VPN</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>IPv4 VPN</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>IPv6 VPN</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>IP dispozitiv</value>
   </data>
@@ -2953,6 +2959,18 @@ O sarcină mare a serverului vă poate încetini conexiunea.</value>
     <value>Proton VPN - Sondaj</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>Pentru a include această adresă, trebuie să permiteți conexiuni IPv6 prin tunelul VPN.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Activare IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Nu acum</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 este dezactivat</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Actualizare acum</value>
   </data>
@@ -3266,6 +3284,19 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
     <value>Aplicare</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Adresa e deja adăugată.</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Introduceți o adresă IPv4 sau IPv6 validă</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Avertizare - detalii</value>
+  </data>
   <data name="Settings_Connection">
     <value>Conexiune</value>
   </data>
@@ -3280,6 +3311,10 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Servere DNS personale</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Adăugare server DNS</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>Nu veți putea utiliza NetShield atunci când v-ați conectat cu un server DNS personal.</value>
@@ -3297,15 +3332,20 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
     <value>Servere DNS ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>Adăugare adrese IPv4</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Introduceți adresa IPv4 sau IPv6 a serverului</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>Asistență IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>Dezactivare trafic prin IPv6</value>
+    <value>Protecție divulgări prin IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Previne divulgările prin IPv6 blocând conexiunile către adrese IPv6.</value>
+    <value>Previne divulgările de date prin blocarea traficului IPv6 care nu trece prin tunelul VPN.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Permite traficului IPv6 să treacă prin tunelul VPN. Acest lucru îmbunătățește compatibilitatea cu site-urile web și serviciile IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Permitere conexiuni LAN</value>
@@ -3480,9 +3520,6 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Divizare trafic</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>Adăugare aplicație</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>Fișiere aplicație</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3513,8 +3550,8 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
     <value>Includere</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>Adăugare IP</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Adăugați o adresă nouă IPv4 sau IPv6</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Adrese IP selectate ({0})</value>
@@ -3522,9 +3559,6 @@ O solicitare mare a serverului vă poate încetini conexiunea.</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>Eliminare IP</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>Adăugare adresă IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Mod excludere</value>
