--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/uk-UA/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/uk-UA/Resources.resw
@@ -2317,6 +2317,12 @@
   <data name="Flyouts_IpAddress_VpnIp">
     <value>VPN IP</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>Ваша IP-адреса</value>
   </data>
@@ -3061,6 +3067,18 @@
     <value>Proton VPN – опитування</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>Щоб використовувати цю адресу, потрібно дозволити з'єднання IPv6 через тунель VPN.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Увімкнути IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Не зараз</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 вимкнено</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>Оновити</value>
   </data>
@@ -3374,6 +3392,19 @@ VPN-з'єднання</value>
     <value>Застосувати</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Адресу вже додано</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Введіть дійсну адресу IPv4 або IPv6</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Попередження - докладніше</value>
+  </data>
   <data name="Settings_Connection">
     <value>З'єднання</value>
   </data>
@@ -3388,6 +3419,10 @@ VPN-з'єднання</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>Власні DNS-сервери</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Додати новий DNS-сервер</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>Ви не зможете використовувати NetShield, якщо під'єднані до власного DNS-сервера.</value>
@@ -3405,15 +3440,20 @@ VPN-з'єднання</value>
     <value>DNS-сервери ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>Додати адресу IPv4</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Введіть адресу IPv4 або IPv6 сервера</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>Підтримка IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>Вимкнути трафік IPv6</value>
+    <value>Захист від витоку IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Запобігання витоку IPv6 блокуванням під'єднання до адрес IPv6.</value>
+    <value>Запобігає витокам даних, блокуючи трафік IPv6, що не проходить через тунель VPN.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Дозволяє трафіку IPv6 проходити через VPN-тунель. Це покращує сумісність з вебсайтами та службами IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Дозволити LAN-з'єднання</value>
@@ -3588,9 +3628,6 @@ VPN-з'єднання</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>Роздільне тунелювання</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>Додати програму</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>Файли програм</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3621,8 +3658,8 @@ VPN-з'єднання</value>
     <value>Включити</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>Додати IP-адресу</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Додати нову адресу IPv4 або IPv6</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>Вибрані IP-адреси ({0})</value>
@@ -3630,9 +3667,6 @@ VPN-з'єднання</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>Вилучити IP-адресу</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>Додати адресу IPv4</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>Режим винятків</value>
