--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/zh-TW/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/zh-TW/Resources.resw
@@ -2092,6 +2092,12 @@
   <data name="Flyouts_IpAddress_VpnIp">
     <value>VPN IP</value>
   </data>
+  <data name="Flyouts_IpAddress_VpnIpv4">
+    <value>VPN IPv4</value>
+  </data>
+  <data name="Flyouts_IpAddress_VpnIpv6">
+    <value>VPN IPv6</value>
+  </data>
   <data name="Flyouts_IpAddress_YourIp">
     <value>您的 IP</value>
   </data>
@@ -2738,6 +2744,18 @@
     <value>Proton VPN - 問卷調查</value>
     <comment>The window title displayed at the top of the NPS (Net Promoter Score) survey</comment>
   </data>
+  <data name="Overlay_Ipv6Disabled_Description">
+    <value>To include this address, you need to allow IPv6 connections through the VPN tunnel.</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_PrimaryButton">
+    <value>Enable IPv6</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_SecondaryButton">
+    <value>Not now</value>
+  </data>
+  <data name="Overlay_Ipv6Disabled_Title">
+    <value>IPv6 is disabled</value>
+  </data>
   <data name="Overlay_OutdatedClient_Action">
     <value>立即更新</value>
   </data>
@@ -3051,6 +3069,19 @@ VPN 連線</value>
     <value>套用</value>
     <comment>Apply action. Used to apply changes made on a settings page</comment>
   </data>
+  <data name="Settings_Common_IpAddresses_AlreadyExists">
+    <value>Address already added</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Invalid">
+    <value>Enter a valid IPv4 or IPv6 address</value>
+  </data>
+  <data name="Settings_Common_IpAddresses_Watermark">
+    <value>192.0.2.0</value>
+    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  </data>
+  <data name="Settings_Common_Ipv6WarningButton">
+    <value>Warning - learn more</value>
+  </data>
   <data name="Settings_Connection">
     <value>連接</value>
   </data>
@@ -3065,6 +3096,10 @@ VPN 連線</value>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers">
     <value>自訂 DNS 伺服器</value>
+  </data>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_AddNew">
+    <value>Add new DNS server</value>
+    <comment>Label above an input field where users can enter a new DNS server IP address.</comment>
   </data>
   <data name="Settings_Connection_Advanced_CustomDnsServers_Conflict_Description">
     <value>使用自訂 DNS 伺服器時，您將無法使用 NetShield。</value>
@@ -3082,15 +3117,20 @@ VPN 連線</value>
     <value>伺服器 ({0})</value>
     <comment>Header for the list of Custom DNS servers defined. {0} is a placeholder for the number of DNS servers in the list. (eg. "DNS servers (4)")</comment>
   </data>
-  <data name="Settings_Connection_Advanced_CustomDnsServers_Watermark">
-    <value>加入 IPv4 位址</value>
-    <comment>Watermark for the IP Address field in the Custom DNS servers settings page</comment>
+  <data name="Settings_Connection_Advanced_CustomDnsServers_IpAddress_Description">
+    <value>Enter the server's IPv4 or IPv6 address</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6">
+    <value>IPv6 support</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection">
-    <value>停用 IPv6 流量</value>
+    <value>IPv6 leak protection</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>透過封鎖與 IPv6 位址的連線，防止 IPv6 洩漏。</value>
+    <value>Prevents data leaks by blocking IPv6 traffic that doesn't pass through the VPN tunnel.</value>
+  </data>
+  <data name="Settings_Connection_Advanced_Ipv6_Description">
+    <value>Allows IPv6 traffic to pass through the VPN tunnel. This improves compatibility with IPv6 websites and services.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>允許內網連線</value>
@@ -3265,9 +3305,6 @@ VPN 連線</value>
   <data name="Settings_Connection_SplitTunneling">
     <value>分隔通道</value>
   </data>
-  <data name="Settings_Connection_SplitTunneling_Apps_Add">
-    <value>加入應用程式</value>
-  </data>
   <data name="Settings_Connection_SplitTunneling_Apps_FilesFilterName">
     <value>應用程式檔案</value>
     <comment>Describe the name of the filter used to select executable files in the Open file dialog</comment>
@@ -3298,8 +3335,8 @@ VPN 連線</value>
     <value>包含</value>
     <comment>Shorter version (if possible) of "Include mode". To be used when available space is limited.</comment>
   </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Add">
-    <value>加入 IP 位址</value>
+  <data name="Settings_Connection_SplitTunneling_IpAddresses_AddNew">
+    <value>Add new IPv4 or IPv6 address</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Header">
     <value>已選擇的 IP 位址 ({0})</value>
@@ -3307,9 +3344,6 @@ VPN 連線</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_IpAddresses_Remove">
     <value>移除 IP 位址</value>
-  </data>
-  <data name="Settings_Connection_SplitTunneling_IpAddresses_Watermark">
-    <value>加入 IPv4 位址</value>
   </data>
   <data name="Settings_Connection_SplitTunneling_Standard">
     <value>排除模式</value>
